no-issue: remove warning about varargs in translate methods